# induction-Asvin-Sunderiyal

./: README.md
aruco_navigator/: CMakeLists.txt  package.xml
aruco_navigator/log/: latest_list
aruco_navigator/scripts/: aruco_navigator.py
aruco_navigator/worlds/: world.sdf
coordinate_follower/: CMakeLists.txt  package.xml
coordinate_follower/action/: MoveToPos.action
coordinate_follower/log/: latest_list
coordinate_follower/scripts/: coordinates.txt  move_to_pos_client.py  move_to_pos_server.py
install/: local_setup.sh  setup.sh  setup.zsh
install/my_robot_controller/share/my_robot_controller/: package.sh
install/turtle_controller/lib/turtle_controller/: draw_circle.py
install/turtle_controller/share/ament_index/resource_index/parent_prefix_path/: turtle_controller
install/turtle_controller/share/turtle_controller/: local_setup.dsv  package.dsv  package.ps1  package.sh
log/: latest_build  latest_list
obstacle_avoider/: CMakeLists.txt  package.xml
obstacle_avoider/scripts/: obstacle_avoider.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/install/my_robot_controller/share/my_robot_controller/: package.sh  package.xml
src/my_robot_controller/my_robot_controller/: draw_circle.py
turtle_controller/: CMakeLists.txt  package.xml
turtle_controller/scripts/: draw_circle.py
