<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coordinate_follower</name>
  <version>0.0.1</version>
  <description>ROS 2 action package to move TurtleBot3 to a target (x, y) coordinate using MoveToPos action.</description>

  <maintainer email="asvin@todo.todo">Asvin Sunderiyal</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build and run dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <!-- Message/interface group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Optional testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

