<?xml version="1.0"?>
<package format="3">
  <name>obstacle_avoider</name>
  <version>0.0.0</version>
  <description>Basic obstacle avoidance behavior using LaserScan data.</description>
  <maintainer email="asvinsunderiyal@gmail.com">asvin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

